fix: guard graphspace management APIs in standalone mode